<resources>
    <string name="app_name">3C生活百貨</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_position">購物中心位置</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_user_account">使用者帳戶</string>
    <string name="action_order_list">購物車</string>
    <string name="action_order_form">訂購單</string>
    <string name="action_delete">Delete this data</string>
    <string name="action_return">返回</string>
    <string name="title_activity_cake">3C生活百貨</string>
    <string name="action_memo">採購小筆記</string>
    <string name="action_search">產品搜尋</string>
    <string name="action_loading">正在載入...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_phone">3C生活百貨</string>
    <string name="title_activity_camera">3C生活百貨</string>
    <string name="title_activity_book">3C生活百貨</string>
    <string name="title_activity_page">3C生活百貨</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_position">3C生活百貨</string>
    <string name="title_activity_search">3C生活百貨</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">3C生活百貨</string>
    <string name="action_login">網路連線後即可登入</string>
    <string name="action_logout">使用者登出</string>
    <string name="default_notification_channel_id">OnSaleChannel</string>
    <string name="orderForm_notification_channel_id">OrderFormChannel</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="account">E-mail (帳號) : </string>
    <string name="password">Password (密碼) : </string>
    <string name="login">Login</string>
    <string name="dollar">元</string>
    <string name="product_to_buy">欲購買商品 : </string>
    <string name="clear">清除</string>
    <string name="reset">重設</string>
    <string name="save">儲存</string>
    <string name="buy">加入購物車</string>
    <string name="want_to_buy">有購買意願的產品</string>
    <string name="order_form_list">已購買的產品</string>
    <string name="promotion">預購促銷</string>
    <string name="hundred">100</string>
    <string name="price">價格</string>
    <string name="name">名稱</string>
    <string name="order_list">訂單明細</string>
    <string name="comment">(此App為測試版本, 並無實際付費購買的功能, 感謝您的使用 !)</string>
    <string name="order_thanks">您會收到預購商品促銷的推播簡訊和E-mail訂單的預估明細通知, 感謝您.</string>
    <string name="product_name">產品名稱 : </string>
    <string name="search">查詢</string>
    <string name="user_name">姓名:</string>
    <string name="change">更改</string>
    <string name="htc">HTC</string>
    <string name="asus">ASUS</string>
    <string name="samsung">SAMSUNG</string>
    <string name="intro">簡介</string>
    <string name="dish">餐點產品</string>
    <string name="book">書籍產品</string>
    <string name="cake">甜點產品</string>
    <string name="nikon">Nikon 數位相機</string>
    <string name="canon">Canon 數位相機</string>
    <string name="sony">Sony 數位相機</string>
    <string name="mall_demo">購物中心影片介紹: Demo Sample</string>
    <string name="mall_map">購物中心參考位置資訊:  可開啟google地圖</string>
    <string name="mall1">台茂購物中心</string>
    <string name="mall2">大江購物中心</string>
    <string name="mall3">大潤發平鎮店</string>
    <string name="mall4">家樂福內壢店</string>
    <string name="mall5">愛買桃園店</string>
    <string name="mall6">好市多中壢店</string>
    <string name="mall7">華泰名品城</string>
    <string name="dish_name">海鮮羹</string>
    <string name="user_account">User Account</string>
    <string name="all_phone">顯示所有同廠牌手機: </string>
    <string name="dish_icon">餐點</string>
    <string name="cake_icon">甜點</string>
    <string name="phone_icon">手機</string>
    <string name="camera_icon">相機</string>
    <string name="book_icon">書籍</string>
    <string name="sell_number">已銷售數量</string>
    <string name="stock_number">庫存數量</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
