<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dish"
            android:icon="@drawable/dish"
            android:title="@string/dish_icon" />
        <item
            android:id="@+id/nav_cake"
            android:icon="@drawable/cake"
            android:title="@string/cake_icon" />
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/phone_icon"
            android:title="@string/phone_icon" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera_icon"
            android:title="@string/camera_icon" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/book"
            android:title="@string/book_icon" />
    </group>



</menu>
