<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/account"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/loginEmail_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:text="@string/password"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/loginPassword_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login"
        android:textAlignment="gravity" />

</LinearLayout>