<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edd380"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.store3c.MemoActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:context="com.example.user.store3c.MemoActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMemo"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:logo="@drawable/store_logo"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/title_activity_maps" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="250dp"
                android:layout_height="42dp"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/action_memo"
                android:textColor="#b56aeb"
                android:textColorLink="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic" />

            <EditText
                android:id="@+id/memoPrice_id"
                android:layout_width="100dp"
                android:layout_height="42dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="0.6"
                android:background="#99ebe7"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxWidth="100dp"
                android:maxLength="10"
                android:text="@string/hundred" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="35dp"
                android:layout_height="42dp"
                android:layout_marginLeft="3dp"
                android:background="@color/colorAccent"
                android:gravity="center_vertical|center_horizontal|center"
                android:paddingRight="5dp"
                android:text="@string/dollar"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingLeft="3dp"
                android:text="@string/product_to_buy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/memoText_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#99ebe7"
                android:ems="10"
                android:gravity="left|center_vertical"
                android:inputType="text"
                android:maxLength="38"
                android:paddingLeft="3dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/memoClear_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/clear" />

            <Button
                android:id="@+id/memoSave_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/save" />

            <Button
                android:id="@+id/memoRtb_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/action_return" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memoRecyclerView_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>