<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.store3c.PhoneActivity"
    tools:showIn="@layout/app_bar_phone">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/phoneTabLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"

        android:background="#50c3ed"
        app:layout_scrollFlags="scroll"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="true"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/htc"
            app:layout_scrollFlags="scroll" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asus"
            app:layout_scrollFlags="scroll" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samsung"
            app:layout_scrollFlags="scroll" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerPhone_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="#6ae7d8"
        app:layout_scrollFlags="scroll" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_id"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:adSize="BANNER"
        app:layout_scrollFlags="scroll"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111">

    </com.google.android.gms.ads.AdView>

</LinearLayout>
